2012-11-13  Karl Berry  <karl@gnu.org>

	* doc/Makefile.am (wwwdoc-build, wwwdoc-install): new targets
	for updating the manuals on the web.
	
	* doc/texinfo.txi (makeinfo options): lowercase o options
	in compatibility @anchor, since that's what the 4.13 manual had.

	* tp/tests/tex_html_tests.sh, long_tests.sh, parser_base_tests:
	avoid [ ... ] and test ... -a ...
	* install-info/tests/*.test: use -x for better logging.
	Suggestion from Stefano, texinfo-devel 11 Nov 2012 10:43:02.

2012-11-10  Patrice Dumas  <pertusus@free.fr>

	* */Makefile.am: add $(srcdir) for out of source build when
	needed.
	* doc/tp_api/Makefile.am: use a variable instead of $^ which is
	not portable.
	* tp/.cvsignore: ignore *.trs and *.log.
	* TODO: update
	* tp/tests/*/*.sh, tp/tests/run_parser_all.sh: do a chmod on 
	files copied from the source directory, for instance to have
	them removed by clean targets.

2012-11-10  Karl Berry  <karl@gnu.org>

	* */Makefile.am: laboriously+manually+redundantly expand $< in
	non-suffix rule.

	* install-info/tests/defs.in: set CDPATH before unsetting,
	to placate BSD sh.  From Stefano.
	* install-info/tests/ii-0053-test: avoid -e.

	* configure.ac (AM_INIT_AUTOMAKE): use parallel-tests,
	as recommended by Stefano Lattarini.  Require automake 1.12.
	* build-aux/test-driver: new file to support it.
	* .cvsignore: ignore *.trs and *.log in test dirs.

2012-11-09  Karl Berry  <karl@gnu.org>

	* configure.ac: remove MKDIR_P fallback.
	* texi2html/Makefile.am,
	* tp/Makefile.am: consistently use $(mkdir_p) rather than $(MKDIR_P).
	
	* Run gnulib-tool --import, srclist.txi.

2012-11-08  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (@indentedblock): new node for new command.
	(Quotations and Examples, small): mention @smallindentedblock.
	(Command List): include these two new commands.
	* doc/refcard/txirefcard.tex: likewise.
	* NEWS: likewise.
	* doc/texinfo.tex (\indentedblockstart, \Eindentedblock,
	\Esmallindentedblock): new macros to implement them.